microservice/app1.backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-dotnet
  namespace: taskdesk
  labels: { app: app1-dotnet, part-of: taskdesk }
spec:
  selector: { app: app1-dotnet }
  ports:
    - name: http
      port: 80
      targetPort: 8080
